<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
     android:orientation="vertical"

    tools:context=".LoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/title_color"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="登录"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_20" />

    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="0.6"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/iv_login_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@mipmap/ic_launcher"
            />
        <TextView
            android:id="@+id/tv_login_versionName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="当前版本:1.0"
            android:layout_marginTop="10dp"
            android:textSize="@dimen/text_size_16"
            android:textColor="@color/text_gray_6"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:padding="10dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/ll_login_rounded_corners"
            android:padding="10dp"
            android:orientation="vertical"
            android:focusable="true"
            android:focusableInTouchMode="true"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <ImageView
                    android:id="@+id/iv_login_name"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@mipmap/login_name"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    />
                <EditText
                    android:id="@+id/et_login_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/login_name_hint"
                    android:textSize="@dimen/text_size_16"
                    android:layout_marginLeft="5dp"
                    android:padding="3dp"
                    android:text=""
                    android:textColor="@color/text_gray_9"
                    android:layout_centerVertical="true"
                    android:textColorHint="@color/text_gray_9"
                    android:singleLine="true"
                    android:layout_toRightOf="@+id/iv_login_name"
                    />
                <ImageView
                    android:id="@+id/iv_login_nameDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/close"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:visibility="gone"
                    />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/DDDDDD"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >
                <ImageView
                    android:id="@+id/iv_login_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:src="@mipmap/login_pwd"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    />
                <EditText
                    android:id="@+id/et_login_pwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:hint="@string/login_pwd_hint"
                    android:textSize="@dimen/text_size_16"
                    android:layout_marginLeft="5dp"
                    android:padding="3dp"
                    android:textColor="@color/text_gray_9"
                    android:layout_centerVertical="true"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text=""
                    android:textColorHint="@color/text_gray_9"
                    android:layout_toRightOf="@+id/iv_login_pwd"
                    />
                <ImageView
                    android:id="@+id/iv_login_pwdDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/close"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:visibility="gone"
                    />
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >

            <CheckBox
                android:id="@+id/cb_login_jzmm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:button="@drawable/login_checkbox_jzmm_selector"
                android:checked="true"
                android:paddingLeft="10dp"
                android:text="@string/login_jzmm"
                android:textColor="@color/text_gray_6" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/blue_button"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_dl"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/ll_login_registered"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/blue_button"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="注册"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14" />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
