<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"

    tools:context=".activity.RegisteredActivity">

    <include layout="@layout/title" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.chxip.campusinfo.view.ImageTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_login_name"
                android:textColor="@color/text_gray_6"
                android:textSize="@dimen/text_size_18" />

            <EditText
                android:id="@+id/et_registered_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="请输入学号"
                android:singleLine="true"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_gray_9"
                android:textSize="@dimen/text_size_14"

                />

            <com.chxip.campusinfo.view.ImageTextView
                android:id="@+id/tv_login_name_detele"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/image_edittext_delete"
                android:textColor="@color/text_gray_6"
                android:textSize="@dimen/text_size_14"
                android:visibility="invisible" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/DDDDDD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.chxip.campusinfo.view.ImageTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_login_pwd"
                android:textColor="@color/text_gray_6"
                android:textSize="@dimen/text_size_18" />

            <EditText
                android:id="@+id/et_registered_pwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="@string/login_pwd_hint"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_gray_9"
                android:textSize="@dimen/text_size_14" />

            <com.chxip.campusinfo.view.ImageTextView
                android:id="@+id/tv_login_pwd_according"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/image_login_pwd_according"
                android:textColor="@color/text_gray_6"
                android:textSize="@dimen/text_size_14"
                android:visibility="invisible" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/DDDDDD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.chxip.campusinfo.view.ImageTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_login_pwd"
                android:textColor="@color/text_gray_6"
                android:textSize="@dimen/text_size_18" />

            <EditText
                android:id="@+id/et_registered_qrPwd"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="请确认密码"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_gray_9"
                android:textSize="@dimen/text_size_14" />

            <com.chxip.campusinfo.view.ImageTextView
                android:id="@+id/tv_login_qrPwd_according"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/image_login_pwd_according"
                android:textColor="@color/text_gray_6"
                android:textSize="@dimen/text_size_14"
                android:visibility="invisible" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/DDDDDD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.chxip.campusinfo.view.ImageTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_login_name"
                android:textColor="@color/text_gray_6"
                android:textSize="@dimen/text_size_18" />

            <EditText
                android:id="@+id/et_registered_realname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="请输入真实姓名/昵称"
                android:singleLine="true"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_gray_9"
                android:textSize="@dimen/text_size_14"

                />

            <com.chxip.campusinfo.view.ImageTextView
                android:id="@+id/tv_login_realname_detele"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/image_edittext_delete"
                android:textColor="@color/text_gray_6"
                android:textSize="@dimen/text_size_14"
                android:visibility="invisible" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/DDDDDD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="10dp">

            <com.chxip.campusinfo.view.ImageTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_login_name"
                android:textColor="@color/text_gray_6"
                android:textSize="@dimen/text_size_18" />

            <EditText
                android:id="@+id/et_registered_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@null"
                android:hint="请输入手机号码"
                android:singleLine="true"
                android:inputType="number"
                android:maxLength="11"
                android:textColor="@color/text_black"
                android:textColorHint="@color/text_gray_9"
                android:textSize="@dimen/text_size_14"

                />

            <com.chxip.campusinfo.view.ImageTextView
                android:id="@+id/tv_login_email_detele"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:text="@string/image_edittext_delete"
                android:textColor="@color/text_gray_6"
                android:textSize="@dimen/text_size_14"
                android:visibility="invisible" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/DDDDDD" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="性别：" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rb_registered_men"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:checked="true"
                    android:text="男" />

                <RadioButton
                    android:id="@+id/rb_registered_wumen"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="女" />
            </RadioGroup>


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_registered"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/blue_button"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="注册"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14" />

        </LinearLayout>
    </LinearLayout>


</LinearLayout>
